feat: add EditChannelPermissions route
